Created javascript function to check user guess. Also changed game name & wrote a basic plan (unfinished)

--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game</title>
+    <title>Stacks On!</title>
+    <link rel="stylesheet" href="script.js">
 </head>
 <body>
-    <p>A Simplified Wordle</p>
+    <input class="letterbox" id="letter01" type="text" maxlength="1">
+    <input class="letterbox" id="letter02" type="text" maxlength="1">
+    <input class="letterbox" id="letter03" type="text" maxlength="1">
+    <button id="submit">Submit</button>
+    <script src="/Users/davidpbuckley/sei/project-1/wordle/script.js" defer></script>
 </body>
 </html>
