Extended functionality of takeCompTurn function to include computer successfully choosing a word to play based on what options there are

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <input class="letterbox" id="letter02" type="text" maxlength="1">
     <input class="letterbox" id="letter03" type="text" maxlength="1">
     <button id="submit">Submit</button>
-    <script src="/Users/davidpbuckley/sei/project-1/wordle/script.js" defer></script>
+    <script src="script.js"></script>
 </body>
 </html>
