--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <input class="letterbox" id="letter02" type="text" maxlength="1">
     <input class="letterbox" id="letter03" type="text" maxlength="1">
     <button id="submit">Submit</button>
+    <script src="word_library.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
