Amended the letter input ids so that they are iterable and match the id structure the computer player generates

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="script.js">
 </head>
 <body>
-    <input class="letterbox" id="letter01" type="text" maxlength="1">
-    <input class="letterbox" id="letter02" type="text" maxlength="1">
-    <input class="letterbox" id="letter03" type="text" maxlength="1">
+    <div id="word">
+        <input class="letterbox" id="letter01" type="text" maxlength="1">
+        <input class="letterbox" id="letter02" type="text" maxlength="1">
+        <input class="letterbox" id="letter03" type="text" maxlength="1">
+    </div>
     <button id="submit">Submit</button>
     <script src="word_library.js"></script>
     <script src="script.js"></script>
