Updated functionality to add new user input after computer guess.

--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stacks On!</title>
-    <link rel="stylesheet" href="script.js">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="word">
-        <input class="letterbox" id="letter01" type="text" maxlength="1">
-        <input class="letterbox" id="letter02" type="text" maxlength="1">
-        <input class="letterbox" id="letter03" type="text" maxlength="1">
+        <input class="letterbox" id="letter-0" type="text" maxlength="1">
     </div>
     <button id="submit">Submit</button>
     <script src="word_library.js"></script>
