--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div id="message"></div>
     <div id="word">
-        <input class="letterbox" id="letter-0" type="text" maxlength="1">
+        <input class="letterbox" id="letter-0" type="text" maxlength="1" autofocus>
     </div>
-    <button id="submit">Submit</button>
     <script src="word_library.js"></script>
     <script src="script.js"></script>
 </body>
