--- a/index.html
+++ b/index.html
@@ -4,14 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stacks On!</title>
+    <title>Spell Checkers!</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&display=swap" rel="stylesheet">
 </head>
 <body>
-<div id="message"></div>
-    <div id="word">
-        <input class="letterbox" id="letter-0" type="text" maxlength="1" autofocus>
-    </div>
+    <header>
+        <h1>Spell Checkers!</h1>
+    </header>
+<div id="gameSpace">
+    <div id="userPoints"></div>
+    <div id="compPoints"></div>
+    <div id="message"></div>
+        <div id="word">
+        </div>
+</div>
     <script src="word_library.js"></script>
     <script src="script.js"></script>
 </body>
