Restructured code to be clearer and more modular. Added 'claim' function on shorter words

--- a/index.html
+++ b/index.html
@@ -23,12 +23,15 @@
         <p>COMPUTER</p>
         <p id="compPoints"></p>
     </div>
+    <div id="wordsLeft"></div>
     <div id="message"></div>
         <div id="word">
         </div>
+        <div id="choice" style="display: none;"><button id="claim">Claim points</button> <button id="continue">Continue</button></div>
         <div id="playAgain" style="display: none;"><button id="reset">Play again</button></div>
 </div>
     <script src="word_library.js"></script>
     <script src="script.js"></script>
+    <!-- <script src="script2.js"></script> -->
 </body>
 </html>
