Add new (smaller) word library, updated css on buttons and updated some functionality on how the buttons appear/disappear. Also started on the 'difficulty' settings (setOddsOrEvens function)

--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
     <div id="message"></div>
         <div id="word">
         </div>
-        <div id="choice" style="display: none;"><button id="claim">Claim points</button> <button id="continue">Continue</button></div>
-        <div id="playAgain" style="display: none;"><button id="reset">Play again</button></div>
+        <div id="options">
+        <button id="claim" style="display: none;">Claim points</button>
+        <button id="continue" style="display: none;">Continue</button>
+        <button id="reset" style="display: none;">Play again</button>
+    </div>
 </div>
-    <script src="word_library.js"></script>
+    <script src="new_word_library.js"></script>
     <script src="script.js"></script>
     <!-- <script src="script2.js"></script> -->
 </body>
