--- a/index.html
+++ b/index.html
@@ -13,21 +13,17 @@
 <body>
     <header>
         <h1>SPELL<span id="checkers">CHECKERS</span></h1>
+        <div id="difficulty">
+        </div>
     </header>
 <div id="gameSpace">
-    <div id="userPointsDiv">
-        <p>USER</p>
-        <p id="userPoints"></p>
-    </div>
-    <div id="compPointsDiv">
-        <p>COMPUTER</p>
-        <p id="compPoints"></p>
-    </div>
+    <div id="userPointsDiv"></div>
+    <div id="compPointsDiv"></div>
+
     <div id="wordsLeft"></div>
     <div id="message"></div>
-        <div id="word">
-        </div>
-        <div id="options">
+    <div id="word"></div>
+    <div id="options">
         <button id="claim" style="display: none;">Claim points</button>
         <button id="continue" style="display: none;">Continue</button>
         <button id="reset" style="display: none;">Play again</button>
