Added 'Hard Mode' to the page, which counts out 3 strikes when a user tries to add an incorrect letter, and also hides the 'possible words left' counter

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 <body>
     <header>
+        <div id="pointsToWin">
+        </div>
         <h1>SPELL<span id="checkers">CHECKERS</span></h1>
         <div id="difficulty">
         </div>
