--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 </head>
 <body>
     <header>
-        <div id="pointsToWin">
+        <div id="scoreboard">
+            <p>GAMES WON:</p>
+            <p>USER: <span id="usersWins"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;COMP: <span id="compsWins"></span></p>
         </div>
         <h1>SPELL<span id="checkers">CHECKERS</span></h1>
         <div id="difficulty">
@@ -22,13 +24,17 @@
     <div id="userPointsDiv"></div>
     <div id="compPointsDiv"></div>
 
-    <div id="wordsLeft"></div>
-    <div id="message"></div>
+    <div id="wordsLeft">
+    </div>
+    <div id="message">
+
+    </div>
     <div id="word"></div>
     <div id="options">
         <button id="claim" style="display: none;">Claim points</button>
         <button id="continue" style="display: none;">Continue</button>
-        <button id="reset" style="display: none;">Play again</button>
+        <button id="playAgain" style="display: none;">Play again</button>
+        <button id="refresh" style="display: none;">New Game!</button>
     </div>
 </div>
     <script src="new_word_library.js"></script>
