Fixed local storage issue

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div id="scoreboard">
             <p>GAMES WON:</p>
-            <p>USER: <span id="usersWins"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;COMP: <span id="compsWins"></span></p>
+            <p>USER: <span id="usersWins">0</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;COMP: <span id="compsWins">0</span></p>
         </div>
         <h1>SPELL<span id="checkers">CHECKERS</span></h1>
         <div id="difficulty">
